--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: my notes # blog_name will be displayed in your blog page
-blog_nav_title: # notes # your blog must have a title for it to be displayed in the nav bar
+blog_nav_title: notes # your blog must have a title for it to be displayed in the nav bar
 blog_description: notes on _stuff_ made public
 permalink: /blog/:year/:title/
 
@@ -220,7 +220,7 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will be dispalyed on the front page of your blog
+display_tags: ['note'] # this tags will be dispalyed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
