--- a/_config.yml
+++ b/_config.yml
@@ -300,6 +300,8 @@ jekyll-diagrams:
     # configuration, see https://github.com/zhustec/jekyll-diagrams.
     # feel free to comment out this section if not using jekyll diagrams.
 
+# Google Analytics
+google_analytics: G-KYRX4WM6CB
 
 # -----------------------------------------------------------------------------
 # Optional Features
