--- a/_config.yml
+++ b/_config.yml
@@ -220,7 +220,7 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['note'] # this tags will be dispalyed on the front page of your blog
+display_tags: ['nlp', 'machine-learning', 'note'] # this tags will be dispalyed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
